# gwyddion-py3

./: README.md
gwyddion-2.61/: AUTHORS  Makefile.am  Makefile.in  NEWS  README  TODO  aclocal.m4  autogen.sh  config.h.in  configure  configure.ac  gwyddion.spec
gwyddion-2.61/.pc/: applied-patches
gwyddion-2.61/app/: Makefile.am  Makefile.in  app.c  app.h  data-browser-aux.c  data-browser.c  data-browser.h  datachooser.c  datachooser.h  dialog.c  dialog.h  file.c  file.h  filelist.c  filelist.h  funcuse.c  funcuse.h  glmaterial-editor.c  glmaterial-editor.h  gradient-editor.c  gradient-editor.h  gwyapp.h  gwyappfilechooser.c  gwyappfilechooser.h  gwyappinternal.h  gwyapptypes.c  gwyapptypes.h  gwymoduleutils-file.c  gwymoduleutils-file.h  gwymoduleutils-synth.c  gwymoduleutils-synth.h  gwymoduleutils.c  gwymoduleutils.h  gwyplaintool.c  gwyplaintool.h  gwyresultsexport.c  gwyresultsexport.h  gwytool.c  gwytool.h  help.c  (+26 more)
gwyddion-2.61/data/: Makefile.am  Makefile.in  gwyddion.1  gwyddion.desktop.in  gwyddion.nsit.in  gwyddion.pc.in  gwyddion.spec.in  gwyddion.thumbnailer.in  gwyddion.vim  gwyddion.xml  mingw-gwyddion-libs.spec.in  net.gwyddion.Gwyddion.appdata.xml
gwyddion-2.61/data/glmaterials/: Makefile.am  Makefile.in
gwyddion-2.61/data/gradients/: Code-V  Gray-inverted  Makefile.am  Makefile.in  Spectral-white  Viridis
gwyddion-2.61/debian/: NEWS  README.source  changelog  control  copyright  gwyddion-common.install  gwyddion.docs  gwyddion.install  gwyddion.links  libgwyddion2-0.install  libgwyddion2-0.links  libgwyddion20-dev.install  libgwyddion20-dev.links  rules
gwyddion-2.61/debian/patches/: fix-manpage-section-for-debian.diff
gwyddion-2.61/debian/source/: include-binaries
gwyddion-2.61/debian/upstream/: gwyddion-2.49.tar.xz.sig  gwyddion-2.50.tar.xz.sig  gwyddion-2.51.tar.xz.sig  gwyddion-2.52.tar.xz.sig  gwyddion-2.54.tar.xz.sig  gwyddion-2.55.tar.xz.sig  gwyddion-2.56.tar.xz.sig  gwyddion-2.57.tar.xz.sig  gwyddion-2.59.tar.xz.sig  gwyddion-2.60.tar.xz.sig  gwyddion-2.61.tar.xz.sig  gwyddion_2.49.orig.tar.xz.asc  gwyddion_2.50.orig.tar.xz.asc  gwyddion_2.51.orig.tar.xz.asc  gwyddion_2.52.orig.tar.xz.asc  gwyddion_2.54.orig.tar.xz.asc  gwyddion_2.55.orig.tar.xz.asc  gwyddion_2.57.orig.tar.xz.asc  gwyddion_2.59.orig.tar.xz.asc  gwyddion_2.60.orig.tar.xz.asc  (+3 more)
gwyddion-2.61/devel-docs/: CODING-STANDARDS  Makefile.am  Makefile.in  add-objects.py  gtk-doc.mk
gwyddion-2.61/gwyddion/: Makefile.am  Makefile.in  about.c  authors.h  gwyddion.c  gwyddion.h  mac_integration.c  mac_integration.h  release.h  remote-unique.c  remote-win32.c  remote-x11.c  remote.c  splash.c  tips.c  toolbox-editor.c  toolbox-spec.c  toolbox.c  toolbox.h  toolbox.xml
gwyddion-2.61/libdraw/: Makefile.am  Makefile.in  gwydraw.c  gwydraw.h  gwydrawenums.h  gwydrawinternal.h  gwydrawtypes.c  gwydrawtypes.h  gwyglmaterial.c  gwyglmaterial.h  gwygradient.c  gwygradient.h  gwypixfield.c  gwypixfield.h  gwyrgba.c  gwyrgba.h  gwyselection.c  gwyselection.h
gwyddion-2.61/libgwyddion/: Makefile.am  Makefile.in  gwycontainer.c  gwymacros.h  gwymath.c  gwymath.h  gwynlfit.c  gwynlfitpreset.c  gwyresource.c  gwyresource.h  gwyresults.c  gwysiunit.c  gwyutils.c  gwyutils.h  gwyversion.h
gwyddion-2.61/libgwydgets/: Makefile.am  Makefile.in  gwy3dlabel.c  gwy3dlabel.h  gwy3dsetup.c  gwy3dsetup.h  gwy3dview.c  gwy3dview.h  gwy3dwindow.c  gwy3dwindow.h  gwyadjustbar.c  gwyadjustbar.h  gwyaxis.c  gwyaxis.h  gwyaxisdialog.c  gwyaxisdialog.h  gwycheckboxes.c  gwycheckboxes.h  gwycoloraxis.c  gwycoloraxis.h  gwycolorbutton.c  gwycolorbutton.h  gwycombobox.c  gwycombobox.h  gwycurve.c  gwycurve.h  gwydataview.c  gwydataview.h  gwydataviewlayer.c  gwydataviewlayer.h  gwydatawindow.c  gwydatawindow.h  gwydgetenums.c  gwydgetenums.h  gwydgetmarshals.c  gwydgetmarshals.h  gwydgets.c  gwydgets.h  gwydgettypes.c  gwydgettypes.h  (+78 more)
gwyddion-2.61/libgwymodule/: Makefile.am  Makefile.in  gwymodule-cmap.c  gwymodule-cmap.h  gwymodule-file.c  gwymodule-file.h  gwymodule-graph.c  gwymodule-graph.h  gwymodule-layer.c  gwymodule-layer.h  gwymodule-process.c  gwymodule-process.h  gwymodule-tool.c  gwymodule-tool.h  gwymodule-volume.c  gwymodule-volume.h  gwymodule-xyz.c  gwymodule-xyz.h  gwymodule.h  gwymodulebrowser.c  gwymodulebrowser.h  gwymoduleenums.h  gwymoduleinternal.h  gwymoduleloader.c  gwymoduleloader.h  gwymoduletypes.c  gwymoduletypes.h
gwyddion-2.61/libprocess/: Makefile.am  Makefile.in  brick.c  cdline.c  correct-laplace.c  correct.c  correlation.c  cwt.c  datafield.c  dataline.c  dataline.h  filters-minmax.c  filters.c  filters.h  gwycalibration.c  gwyprocessenums.c  gwyprocessenums.h  gwyprocesstypes.c  gwyshapefitpreset.c  hough.c  inttrans.c  inttrans.h  lawn.c  linestats.c  peaks.c  simplefft.c  simplefft.h  stats-acfpsdf.c  stats-entropy.c  stats-sum.c  stats.c  stats_uncertainty.c
gwyddion-2.61/m4/: Makefile.am  Makefile.in  gwy-cc-options.m4  gwy-enable.m4  gwy-hdf5.m4  gwy-openmp.m4  gwy-python.m4  gwy-version.m4
gwyddion-2.61/modules/: Makefile.am  Makefile.in  plugin-proxy.c
gwyddion-2.61/perl/: Makefile.am  Makefile.in
gwyddion-2.61/pixmaps/: Makefile.am  Makefile.in
gwyddion-2.61/plugins/: Makefile.am  Makefile.in  README  dump.c  dump.cc  dump.hh  dump.sh  invert_cpp.cc  invert_perl.pl  invert_python.py  plugin-helper.hh  yellow.sh
gwyddion-2.61/po/: LINGUAS  Makevars  POTFILES.in  cs.gmo  cs.po  de.gmo  de.po  en_GB.gmo  en_GB.po  es.gmo  es.po  fr.gmo  fr.po  gwyddion.pot  it.gmo  it.po  ja.gmo  ja.po  ko.gmo  ko.po  pt_BR.gmo  pt_BR.po  ru.gmo  ru.po
gwyddion-2.61/python/: Makefile.am  Makefile.in
gwyddion-2.61/ruby/: Makefile.am  Makefile.in
gwyddion-2.61/thumbnailer/: Makefile.am  Makefile.in  gwyddion-thumbnailer.1  gwyddion-thumbnailer.c  gwythumbcreator.cc
gwyddion-2.61/utils/: Makefile.am  Makefile.in  dump-modules.c  extract-file-magic.py  gen-authors.py  gen-gwyddion-msvc-sln.py  gen-module-bundle.sh  genmarshal.mk  make-module-lists  mkenum.mk  modules-web.xsl  update-api-indices.py  update-langs.py  update-potfiles.sh  user-guide-modules  vim-syn-gen.py
(+833 files in other folders)
